--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 	<footer>
 		<figure>
-			<img src="N:\Code Training\Intro to HTML\newlogo.png" alt="Intro to HTML logo">
+			<img src="/newlogo.png" alt="Intro to HTML logo">
 		This page was created by Lea Smith & Colleen van Lent.  To learn more about web design, visit <a href="https://www.intro-webdesign.com" target="_blank">Intro to Web Design.
 		</figure>
 	</footer>
