--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -45,7 +45,7 @@
 	<footer>
 		<figure>
 			<img src="../aboutme/images/newlogo.png" alt="Intro to HTML logo">
-		This page was created by Lea Smith & Colleen van Lent.  To learn more about web design, visit <a href="https://www.intro-webdesign.com" target="_blank">Intro to Web Design.
+		This page was created by Lea Smith & Colleen van Lent.  To learn more about web design, visit <a href="https://www.intro-webdesign.com" target="_blank">Intro to Web Design.</a>
 		</figure>
 	</footer>
 
