--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -9,7 +9,7 @@
 	<main>
 		<h1>Lea Smith</h1>
 		<nav>
-			<a href="https://www.leaunwinphotography.com.au" target="_blank">One</a>
+			<a href="https://www.amazon.com.au" target="_blank">One</a>
 			<a href="https://www.google.com.au" target="_blank">Two</a> 
 			<a href="#">Three</a> 
 			<a href="https://www.stawellgift.com" target="_blank">Run</a>
