--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<main>
+	<header>
 		<h1>Lea Smith</h1>
 		<nav>
 			<a href="https://www.amazon.com.au" target="_blank">One</a>
@@ -14,7 +14,9 @@
 			<a href="#">Three</a> 
 			<a href="https://www.stawellgift.com" target="_blank">Run</a>
 		</nav>	
-
+	</header>
+	
+	<main>
 		<section>
 			<h2>Favorite Foods</h2>
 			<ul>
