--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -26,6 +26,7 @@
 				<li>Nectarines</li>
 			</ul>
 		</section>
+		
 		<section>
 			<h2>Achievements</h2>
 			<p>Progress in this course (100%) <progress value="100" max="100"></progress>
@@ -36,7 +37,6 @@
 		
 		<section>
 			<h2>More About Me</h2>
-		
 			<details>
 				<summary>My childhood</summary>
 					I grew up in Stawell, Victoria, Australia. A small country town famous for the Stawell Gift, Australia's richest footrace.
@@ -46,7 +46,7 @@
 
 	<footer>
 		<figure>
-			<img src="../aboutme/images/newlogo.png" alt="Intro to HTML logo">
+			<img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Intro to HTML logo">
 			This page was created by Lea Smith & Colleen van Lent.  To learn more about web design, visit <a href="https://www.intro-webdesign.com" target="_blank">Intro to Web Design.</a>
 		</figure>
 	</footer>
